crates/tele-macros/tests/ui/fail/duplicate_command_name.rs
use tele_macros::BotCommands as DeriveBotCommands;

#[derive(DeriveBotCommands)]
enum DuplicateCommandName {
    #[command(rename = "start", description = "start bot")]
    Start,
    #[command(rename = "start", description = "also start")]
    AnotherStart,
}

fn main() {}
